2002-04-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/arm/dl-procinfo.c: Completely specify
	size of _dl_arm_cap_flags.
	Patch by enrico.scholz@informatik.tu-chemnitz.de [PR libc/3155].

	* sysdeps/unix/sysv/linux/arm/dl-procinfo.h (_DL_HWCAP_COUNT):
	Define as 8.

2002-03-22  H.J. Lu  <hjl@gnu.org>

	* scripts/firstversions.awk: Check the first version.

2002-04-02  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-deps.c (_dl_map_object_deps): The sorting of the
	dependencies must be stable to work correctly.
	Reported by martin.lubich@datacon.at.

	* libio/bug-ungetwc1.c: New file.
	* libio/Makefile (tests): Add bug-ungetwc1.

	* libio/fileops.c (_IO_new_file_close_it): Only call _IO_do_flush
	if stream was last used for writing.

	* elf/do-lookup.h (do_lookup): 2 is the first user-defined version
	number [PR libc/3111].

	* libio/iofclose.c (_IO_new_fclose): Move freeing of backup buffer
	to ...
	* libio/fileops.c (_IO_new_file_close_it): ...here [PR libc/3190].

2002-04-02  Jakub Jelinek  <jakub@redhat.com>

	* inet/ether_ntoh.c (__nss_ethers_lookup): Add internal_function.
	* inet/ether_hton.c (__nss_ethers_lookup): Likewise.
	* inet/getnetgrent_r.c (__nss_netgroup_lookup): Likewise.
	* sunrpc/netname.c (__nss_publickey_lookup): Likewise.
	* sunrpc/publickey.c (__nss_publickey_lookup): Likewise.

2002-03-30  Jakub Jelinek  <jakub@redhat.com>

	* elf/dynamic-link.h (elf_get_dynamic_info): Don't abort on unknown
	dynamic tags.

2002-03-29  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/fpu/s_fabs.S: New file.
	* sysdeps/i386/fpu/s_fabsf.S: New file.
	* sysdeps/i386/fpu/s_fabsl.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_fabs.c: New file.
	* sysdeps/sparc/sparc64/fpu/s_fabsf.c: New file.
	* sysdeps/sparc/sparc64/fpu/s_fabsl.c: New file.

2002-04-02  Ulrich Drepper  <drepper@redhat.com>

	* rt/tst-shm.c (do_test): Add one more test for size of shared
	memory object.

2002-03-29  Wolfram Gloger  <wg@malloc.de>
